# AtcRunner

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  erc20_example.py  init.sh  main.py  package.json  pkey.json  pyproject.toml  recipe.json  requirements.txt  start.sh  test.py  web.pem
cache/: recipe.pkl
chrome/: DevToolsActivePort  DevToolsActivePort 2  DevToolsActivePort 3  Local State  Local State 2  Local State 3  Safe Browsing Cookies  SingletonCookie  SingletonCookie 2  SingletonLock  SingletonLock 3  SingletonSocket  SingletonSocket 2
chrome/Guest Profile/: Preferences  Reporting and NEL  Visited Links
chrome/PnaclTranslationCache/: index
chrome/Profile 6/: Cookies  Favicons  (+17 more)
cloud/: createTD.sh  stack.json  taskdef.yaml
dex/: abi.json  erc20.py  items.json  uniswap_v2_factory.py  uniswap_v2_pair.py  uniswap_v2_router.py
discord/: README.md  arbs.json  main.py
docker/: DockerfileSelenium
helpers/: Arbitrage.py  Bridge.py  BridgeAPI.py  Data.py  Database.py  Dex.py  Logger.py  Selenium.py  Test.py  Utils.py  Wallet.py  webElements.json
node/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
old/: .env.old
private/: arbs.json  data.json  data.old.json  dees.csv
src-old/: Arbitrage.py  Database.py  Logger.py  Wallet.py
srco/: Bridge.py  Data.py  Dex.py  Wallet.py
unusedExamples/: alchemist_example.py  auction_example.py  consumable_example.py  genes_example.py  hero_example.py  land_example.py  meditation_example.py  quest_example.py  summoning_example.py  wishing_well_quest_example.py
unusedLibs/: __init__.py
(+4962 files in other folders)
