[tool.poetry]
name = "arbot"
version = "0.1.0"
description = ""
authors = ["Luke Halley <luke@Lukes-MacBook-Pro.local>"]

[tool.poetry.dependencies]
python = "^3.9"
web3-ethereum-defi = "^0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
